# block-junction2

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/blockchain_junction_backend/: Cargo.toml  blockchain_junction_backend.did
src/blockchain_junction_backend/src/: auth.rs  lib.rs  storage.rs  swap.rs  types.rs  utils.rs
src/blockchain_junction_frontend/: package.json
src/blockchain_junction_frontend/src/: App.jsx  App.scss
src/blockchain_junction_frontend/src/components/Dashboard/: Dashboard.jsx  Dashboard.scss
src/blockchain_junction_frontend/src/components/Header/: Header.jsx  Header.scss
src/blockchain_junction_frontend/src/components/SwapSection/: CreateSwapForm.jsx  CreateSwapForm.scss  ExecuteSwap.jsx  ExecuteSwap.scss  PendingSwaps.jsx  PendingSwaps.scss  SwapSection.jsx
src/blockchain_junction_frontend/src/components/TransactionHistory/: TransactionHistory.jsx  TransactionHistory.scss
src/blockchain_junction_frontend/src/components/WalletConnection/: BalanceDisplay.jsx  BalanceDisplay.scss  DepositForm.jsx  DepositForm.scss  WalletConnection.jsx  WalletConnection.scss  WithdrawForm.jsx  WithdrawForm.scss
src/blockchain_junction_frontend/src/contexts/: AuthContext.jsx  BackendContext.jsx  SwapSection.scss
